--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -9,43 +9,104 @@ body,
     background-color: $color_background_main;
     color: $color_text_main;
     font-size: $font_size_medium;
+    overflow-x: hidden;
 
     a{
         text-decoration: none;
         color: $color_text_main;
     }
-}
 
-body{
     ::-webkit-scrollbar {
         width: 18px;
         position: absolute;
+        z-index: 30;
+        display: none;
 
         @include Responsive(MD){
             width: 0px;
         }
     }
     ::-webkit-scrollbar-track {
-        background-color: transparent;
+        background-color: rgba(0, 0, 0, 0.3);
     }
     ::-webkit-scrollbar-thumb {
-        background-color: transparent;
+        background-color: rgba(128, 128, 128, 0.4);
         border-radius: 20px;
         border: 6px solid transparent;
         background-clip: content-box;
+        transition:  all ease 0.2s;
     
         &:hover{
-            background-color: $color_light_grey !important;
+            background-color: lightgrey !important;
         }
     }
     
     :hover{
         ::-webkit-scrollbar-thumb{
-            background-color: $color_grey;
+            background-color: grey;
         }
     }
 }
 
+body{
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+.delay100{
+    animation-delay: 100ms;
+}
+
+.delay200{
+    animation-delay: 200ms;
+}
+
+.delay300{
+    animation-delay: 300ms;
+}
+
+.delay400{
+    animation-delay: 400ms;
+}
+
 .delay500{
     animation-delay: 500ms;
+}
+
+.delay600{
+    animation-delay: 600ms;
+}
+
+.delay700{
+    animation-delay: 700ms;
+}
+
+.delay800{
+    animation-delay: 800ms;
+}
+
+.delay900{
+    animation-delay: 900ms;
+}
+
+.delay1000{
+    animation-delay: 1000ms;
+}
+
+.delay1100{
+    animation-delay: 1100ms;
+}
+
+.delay1200{
+    animation-delay: 1200ms;
+}
+
+.delay1300{
+    animation-delay: 1300ms;
+}
+
+.delay1400{
+    animation-delay: 1400ms;
 }
