--- a/src/layout/index.module.scss
+++ b/src/layout/index.module.scss
@@ -8,11 +8,24 @@
     min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
+    padding-top: 115px;
+    position: relative;
 }
 
 .header{
     font-family: $font_dm;
     padding: 24px 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+
+    &.fixed{
+        position: fixed;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 30;
+    }
+
     .container{
         @include container;
         display: flex;
@@ -114,6 +127,10 @@
                     gap: 8px;
                 }
 
+                @include Responsive(SM){
+                    display: none;
+                }
+
                 .iconItem{
                     transition: all 0.2s ease;
 
@@ -148,6 +165,74 @@
                             }
                         }
                     }
+                }
+            }
+
+            .menuMobileBtn{
+                background: none;
+                border: none;
+                margin-left: 12px;
+                display: none;
+
+                @include Responsive(SM){
+                    display: inline;
+                }
+
+                svg{
+                    width: 36px;
+                    height: 36px;
+                }
+            }
+        }
+    }
+}
+
+.menuMobile{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    backdrop-filter: blur(30px);
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 48px;
+    font-size: 24px;
+    background-color: rgba(0, 0, 0, 0.4);
+
+    .close{
+        background: none;
+        border: none;
+        position: absolute;
+        top: 24px;
+        left: 24px;
+
+        svg{
+            width: 22px;
+            height: 22px;
+        }
+    }
+
+    .navIconList{
+        display: flex;
+        gap: 18px;
+
+        .iconItem{
+            transition: all 0.2s ease;
+
+            svg{
+                width: 30px;
+                height: 30px;
+                g{
+                    fill: $color_text_secondary;
+                }
+
+                path{
+                    fill: $color_text_secondary;
+
                 }
             }
         }
@@ -273,4 +358,5 @@
 
 .main{
     flex: 1;
+    padding-bottom: 100px;
 }
