--- a/src/components/loading/index.module.scss
+++ b/src/components/loading/index.module.scss
@@ -7,10 +7,66 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
 
     p{
         font-family: $font_dm;
         font-weight: bolder;
         font-size: 52px;
+
+        @include Responsive(MD){
+            font-size: 42px;
+        }
+
+        @include Responsive(SM){
+            font-size: 32px;
+        }
+
+        @include Responsive(XS){
+            font-size: 22px;
+        }
+    }
+
+    .animate{
+        width: 100%;
+        position: absolute;
+
+        p{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            margin: 0;
+
+            span{
+                display: block;
+                border-radius: 50%;
+            }
+
+            &:nth-child(1){
+                span{
+                    width: 150px;
+                    height: 150px;
+                    border: 1px solid #5800FF;
+
+                }
+            }
+            &:nth-child(2){
+                span{
+                    width: 250px;
+                    height: 250px;
+                    border: 2px solid #E900FF;
+                }
+            }
+            &:nth-child(3){
+                span{
+                    width: 400px;
+                    height: 400px;
+                    border: 3px solid #FFC600;
+                }
+            }
+        }
     }
 }
