--- a/src/screens/about/index.module.scss
+++ b/src/screens/about/index.module.scss
@@ -1,16 +1,22 @@
-@import '@/common/styles/common.scss';
+@import "@/common/styles/common.scss";
 
 .aboutScreen {
-    @include container;
-    margin-top: 42px;
+  @include container;
+  margin-top: 42px;
 
-    .title{
-        font-size: 42px;
-        font-weight: 600;
-        margin: 38px 0;
-    }
+  .title {
+    font-size: 42px;
+    font-weight: 600;
+    margin: 38px 0;
+  }
 
-    .frame{
-        max-width: 800px;
-    }
+  .frame {
+    max-width: 800px;
+  }
+
+  .listWork {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
 }
